# rpi_bazel

./: .bazelrc  BUILD  MODULE.bazel  README.md  travis-ci.sh
tools/cc_toolchain/: BUILD  cc_toolchain_config.bzl
tools/cc_toolchain/wrapper/: arm-none-eabi-ar  arm-none-eabi-cpp  arm-none-eabi-g++  arm-none-eabi-gcc  arm-none-eabi-gcov  arm-none-eabi-ld  arm-none-eabi-nm  arm-none-eabi-objcopy  arm-none-eabi-objdump  arm-none-eabi-strip  clang-ar  clang-clang  clang-cpp  clang-dwp  clang-lld  clang-nm  clang-objcopy  clang-objdump  clang-strip
tools/workspace/: extension.bzl
tools/workspace/clang/: libcxx.BUILD  libcxxabi.BUILD  util.bzl
